--- a/pages/classifying/styles.css
+++ b/pages/classifying/styles.css
@@ -28,6 +28,7 @@
     position: absolute;
     padding:0;
     margin:0;
+    padding-top: 5px;
 
     box-sizing: border-box;
     -moz-box-sizing: border-box;
